Add splash image, remove borders, constrain to 100vh

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
   <main>
     <div class="container">
-      <!-- splash image goes here -->
+      <div class="splash">
+        <img src="picotofu.webp" alt="picotofu" />
+      </div>
     </div>
   </main>
 
