Add about blurb below splash for OAuth branding

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="splash">
         <img src="picotofu.webp" alt="picotofu" />
       </div>
+      <p class="splash-desc">picotofu builds web interfaces and bot wrappers for AI coding agents — tools that make working with AI faster, simpler, and more human.</p>
     </div>
   </main>
 
