Add tofucode product page and apps row on homepage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <img src="picotofu.webp" alt="picotofu" />
       </div>
       <p class="splash-desc">picotofu builds web interfaces and bot wrappers for AI coding agents — tools that make working with AI faster, simpler, and more human.</p>
+
+      <div class="apps">
+        <a class="app-item" href="tofucode.html">
+          <img src="tofucode-evening.thumbnail.webp" alt="tofucode" class="app-icon" />
+          <span class="app-name">tofucode</span>
+        </a>
+      </div>
     </div>
   </main>
 
