--- a/tofucode.html
+++ b/tofucode.html
@@ -66,6 +66,7 @@
     <div class="container">
       <span class="footer-copy">&copy; 2026 picotofu</span>
       <div class="footer-links">
+        <a href="https://devs.to" target="_blank" rel="noopener">devs.to</a>
         <a href="privacy-policy.html">Privacy Policy</a>
         <a href="terms-of-use.html">Terms of Use</a>
       </div>
